Initial commit of my profile

--- a/index.html
+++ b/index.html
@@ -1,12 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Adebowale Jasmine - Portfolio</title>
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    <h1>Welcome here</h1>
-    <p>users are great explorers</p>
+
+    <!-- header -->
+    <header>
+
+        <!-- NavBar -->
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero -->
+    <div id="home" class="hero">
+        <h1>Hi, I'm Adebowale Jasmine</h1>
+        <p>Creative Web Developer</p>
+        <button>Download CV</button>
+    </div>
+
+    <!-- Profile  -->
+    <div class="profile">
+        <img src="./asset/A girl.jpg" alt="Profile Picture" title="Adebowale Jasmine" width="150" />
+        <h1>Adebowale Jasmine</h1>
+        <p>
+            Passionate front-end developer focused oncreating beautiful, user-friendly websites.
+        </p>
+
+        <!-- social-links -->
+        <div class="social-links">
+            <a href="https://github.com/Adeife004" title="GitHub Profile">GitHub</a>
+            <a href="https://www.tiktok.com/@__jahsmine__" title="TikTok Profile">TikTok</a>
+            <a href="https://instagram.com/__jahsmine__xx" title="Instagram Profile">Instagram</a>
+        </div>
+
+        <!-- contact-btn -->
+        <button class="contact-btn">Contact Me</button>
+    </div>
+
+    <!-- about -->
+    <div id="about" class="about">
+        <h2>About Me</h2>
+        <p>
+            Hello! I'm Adebowale Jasmine, a passionate front-end developer and UI/UX enthusiast with a strong background
+            in building beautiful, user-friendly, and responsive web applications. With a keen eye for design and a love
+            for clean, efficient code, I specialize in crafting seamless digital experiences that engage users and
+            enhance functionality.
+
+            Over the years, I have honed my skills in HTML, CSS, JavaScript, Vue.js, and React, allowing me to bring
+            creative visions to life. I enjoy problem-solving, staying updated with the latest web technologies, and
+            collaborating with teams to create impactful solutions.
+
+            Beyond coding, I have a deep appreciation for design aesthetics, usability, and accessibility, ensuring that
+            every project I work on is both visually appealing and highly functional. My goal is to continue pushing the
+            boundaries of front-end development, contributing to innovative projects that make a difference.
+
+            When I'm not coding, you’ll find me exploring new tech trends, traveling, or enjoying a cup of tea. I'm
+            always open to exciting opportunities, collaborations, and meaningful conversations. Let's create something
+            amazing together!
+        </p>
+    </div>
+
+    <!-- skills -->
+    <div id="skills" class="skills">
+        <h2>My Skills</h2>
+        <ul>
+            <li>HTML & CSS</li>
+            <li>JavaScript</li>
+            <li>Vue.js</li>
+            <li>React</li>
+            <li>UI/UX Design</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </div>
+
+    <!-- projects -->
+    <div id="projects" class="projects">
+        <h2>My Projects</h2>
+
+        <!-- project-container -->
+        <div class="project-container">
+            <!-- project -->
+            <div class="project">
+                <h3>Project One</h3>
+                <p>A Responsive Login And Signup Page</p>
+                <a href="https://login-signup-peach.vercel.app/">View Project</a>
+            </div>
+
+            <!-- project -->
+            <div class="project">
+                <h3>Project Two</h3>
+                <p>A Color Game built with JavaScript</p>
+                <a href="https://colorgame-blush.vercel.app/">View Project</a>
+            </div>
+
+            <!-- project -->
+            <div class="project">
+                <h3>Project Three</h3>
+                <p>An Hotel Website</p>
+                <a href="https://vercel.com/adebowale-jasmines-projects/almond-hotel">View Project</a>
+            </div>
+
+            <!-- project -->
+            <div class="project">
+                <h3>Project Four</h3>
+                <p>An Event Website</p>
+                <a href="https://vercel.com/adebowale-jasmines-projects/event">View Project</a>
+            </div>
+
+            <!-- project -->
+            <div class="project">
+                <h3>Project Five</h3>
+                <p>A Drama Group Form</p>
+                <a href="https://vercel.com/adebowale-jasmines-projects/cadg">View Project</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- testimonials -->
+    <div id="testimonials" class="testimonials">
+        <h2>What People Say</h2>
+
+        <!-- testimonial-container -->
+        <div class="testimonial-container">
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"Jasmine is a talented developer who consistently delivers exceptional work."</p>
+                <span>- Jane Doe, Software Engineer</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"I've worked with Jasmine on multiple projects and she's a true professional."</p>
+                <span>- John Smith, Project Manager</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"Jasmine's creativity and problem-solving skills are outstanding!"</p>
+                <span>- Jane Doe, CEO TechCorp</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"A true professional! She transformed our website beautifully."</p>
+                <span>- Sarah Smith, Creative Director</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"Jasmine is a talented developer who consistently delivers exceptional work."</p>
+                <span>- Jane Doe, Software Engineer</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"I've worked with Jasmine on multiple projects and she's a true professional."</p>
+                <span>- John Smith, Project Manager</span>
+            </div>
+
+            <!-- testimonial -->
+            <div class="testimonial">
+                <p>"Jasmine's creativity and problem-solving skills are outstanding!"</p>
+                <span>- Jane Doe, CEO TechCorp</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- contact -->
+    <div id="contact" class="contact">
+        <h2>Contact Me</h2>
+
+        <!-- form -->
+        <form action="#" method="POST">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name" required />
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required />
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" placeholder="Your message here..." required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+
+    <!-- footer -->
+    <footer>
+        <p>&copy; 2025 Adebowale Jasmine. All rights reserved.</p>
+        <p>Email: jasmine@example.com | Phone: +123 456 7890</p>
+    </footer>
 </body>
+
 </html>
+
