Added more functionality

--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@
 
             <!-- hero-btn -->
             <div class="hero-btn">
-                <button class="btn1">Download CV</button>
-                <button class="btn2">Contact Me</button>
+
+                <a href="./asset/ADEBOWALE ABIODUN JASMINE_CV.docx" download="Adebowale_Jasmine_CV" class="download-btn">
+                    Download CV
+                </a>
+                
+                <!-- contact btn -->
+                <a href="https://wa.me/message/AJTLJ3LZZCW7I1" target="_blank" class="contact-btn">
+                    Contact Me
+                </a>                
             </div>
 
             <!-- hero-links -->
@@ -287,17 +294,17 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://login-signup-peach.vercel.app/">
+                <a href="https://event-woad-three.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
 
                         <!-- project-image -->
                         <div class="project-image">
-                            <img src="./asset/login&signup-form.png" alt="">
+                            <img src="./asset/event.png" alt="">
                         </div>
                         <h3>Project One</h3>
-                        <p>A Responsive Signup Page</p>
+                        <p>A Responsive Event Website</p>
                     </div>
                 </a>
             </div>
@@ -305,7 +312,7 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://colorgame-blush.vercel.app/">
+                <a href="https://login-signup-peach.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
@@ -323,7 +330,7 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://vercel.com/adebowale-jasmines-projects/almond-hotel">
+                <a href="https://login-signup-peach.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
@@ -333,7 +340,7 @@
                             <img src="./asset/login&signup-form.png" alt="">
                         </div>
                         <h3>Project Three</h3>
-                        <p>A Color Game built with JavaScript</p>
+                        <p>A Responsive SignUp Page</p>
                     </div>
                 </a>
             </div>
@@ -341,17 +348,17 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://vercel.com/adebowale-jasmines-projects/event">
+                <a href="https://cadg.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
 
                         <!-- project-image -->
                         <div class="project-image">
-                            <img src="./asset/login&signup-form.png" alt="">
+                            <img src="./asset/cadg.png" alt="">
                         </div>
                         <h3>Project Four</h3>
-                        <p>A Color Game built with JavaScript</p>
+                        <p>A Responsive Drama Group Website</p>
                     </div>
                 </a>
             </div>
@@ -359,7 +366,7 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://vercel.com/adebowale-jasmines-projects/almond-hotel">
+                <a href="https://almond-hotel.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
@@ -369,7 +376,7 @@
                             <img src="./asset/almond-hotel.png" alt="">
                         </div>
                         <h3>Project Five</h3>
-                        <p>A Color Game built with JavaScript</p>
+                        <p>A Responsive Hotel Website</p>
                     </div>
                 </a>
             </div>
@@ -377,7 +384,7 @@
             <!-- project -->
             <div class="project-link">
 
-                <a href="https://vercel.com/adebowale-jasmines-projects/event">
+                <a href="https://colorgame-blush.vercel.app/">
 
                     <!-- project -->
                     <div class="project">
@@ -387,7 +394,7 @@
                             <img src="./asset/color-game.png" alt="">
                         </div>
                         <h3>Project One</h3>
-                        <p>A Color Game built with JavaScript</p>
+                        <p>A Responsive Color Game</p>
                     </div>
                 </a>
             </div>
