--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- hero-btn -->
             <div class="hero-btn">
 
-                <a href="./asset/ADEBOWALE ABIODUN JASMINE_CV.docx" download="Adebowale_Jasmine_CV" class="download-btn">
+                <a href="./asset/ADEBOWALE_ABIODUN_JASMINE_CV.pdf" download="Adebowale_Jasmine_CV" class="download-btn">
                     Download CV
                 </a>
                 
@@ -303,7 +303,7 @@
                         <div class="project-image">
                             <img src="./asset/event.png" alt="">
                         </div>
-                        <h3>Project One</h3>
+                        <h3>Tems Event</h3>
                         <p>A Responsive Event Website</p>
                     </div>
                 </a>
@@ -321,7 +321,7 @@
                         <div class="project-image">
                             <img src="./asset/login img.png" alt="">
                         </div>
-                        <h3>Project Two</h3>
+                        <h3>Login Page</h3>
                         <p>A Responsive Login Page</p>
                     </div>
                 </a>
@@ -339,7 +339,7 @@
                         <div class="project-image">
                             <img src="./asset/login&signup-form.png" alt="">
                         </div>
-                        <h3>Project Three</h3>
+                        <h3>SignUp Page</h3>
                         <p>A Responsive SignUp Page</p>
                     </div>
                 </a>
@@ -357,7 +357,7 @@
                         <div class="project-image">
                             <img src="./asset/cadg.png" alt="">
                         </div>
-                        <h3>Project Four</h3>
+                        <h3>CADG Form</h3>
                         <p>A Responsive Drama Group Website</p>
                     </div>
                 </a>
@@ -375,7 +375,7 @@
                         <div class="project-image">
                             <img src="./asset/almond-hotel.png" alt="">
                         </div>
-                        <h3>Project Five</h3>
+                        <h3>Almond Hotel</h3>
                         <p>A Responsive Hotel Website</p>
                     </div>
                 </a>
@@ -393,7 +393,7 @@
                         <div class="project-image">
                             <img src="./asset/color-game.png" alt="">
                         </div>
-                        <h3>Project One</h3>
+                        <h3>Color Game</h3>
                         <p>A Responsive Color Game</p>
                     </div>
                 </a>
@@ -474,7 +474,8 @@
     <!-- footer -->
     <footer>
         <p>&copy; 2025 Adebowale Jasmine. All rights reserved.</p>
-        <p>Email: jasmine@example.com | Phone: +123 456 7890</p>
+        <p>Email: adebowalejasmine437@gmail.com </p>
+        <p>Designed By: Adebowale Jasmine</p>
     </footer>
 
     <!-- js script -->
