--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                     <a href="https://instagram.com/__jahsmine__xx" title="Instagram Profile"><i
                             class="fa-brands fa-instagram"></i></a>
                 </div>
+
+                <!-- instagram -->
+                <div class="linkedin">
+                    <a href="https://www.linkedin.com/in/adebowale-jasmine-324171340/" title="Linkedin Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
 
