Added linkedin and corrected the email and phone number

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./asset/j-icon.png" type="image/x-icon">
+
+    <!-- title -->
     <title>Adebowale Jasmine - Portfolio</title>
 
     <!-- google-font -->
@@ -64,11 +69,11 @@
                 <a href="./asset/ADEBOWALE_ABIODUN_JASMINE_CV.pdf" download="Adebowale_Jasmine_CV" class="download-btn">
                     Download CV
                 </a>
-                
+
                 <!-- contact btn -->
                 <a href="https://wa.me/message/AJTLJ3LZZCW7I1" target="_blank" class="contact-btn">
                     Contact Me
-                </a>                
+                </a>
             </div>
 
             <!-- hero-links -->
@@ -95,7 +100,8 @@
 
                 <!-- instagram -->
                 <div class="linkedin">
-                    <a href="https://www.linkedin.com/in/adebowale-jasmine-324171340/" title="Linkedin Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/adebowale-jasmine-324171340/" title="Linkedin Profile"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -416,45 +422,46 @@
             <!-- testimonial -->
             <div class="testimonial">
                 <p>"Jasmine is a talented developer who consistently delivers exceptional work."</p>
-                <span>- Jane Doe, Software Engineer</span>
+                <span>- Adebayo Kehinde, Software Engineer</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
-                <p>"I've worked with Jasmine on multiple projects and she's a true professional."</p>
-                <span>- John Smith, Project Manager</span>
+                <p>"I've worked with Jasmine on multiple projects, and she's a true professional."</p>
+                <span>- Chukwuma Ifeanyi, Project Manager</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
                 <p>"Jasmine's creativity and problem-solving skills are outstanding!"</p>
-                <span>- Jane Doe, CEO TechCorp</span>
+                <span>- Sansaliu Basit, Senior Frontend Developer</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
                 <p>"A true professional! She transformed our website beautifully."</p>
-                <span>- Sarah Smith, Creative Director</span>
+                <span>- Amaka Okonkwo, Creative Director</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
-                <p>"Jasmine is a talented developer who consistently delivers exceptional work."</p>
-                <span>- Jane Doe, Software Engineer</span>
+                <p>"Jasmine is one of the best developers I've worked with—detail-oriented and efficient."</p>
+                <span>- Abdulrahman Yusuf, Senior Software Developer</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
-                <p>"I've worked with Jasmine on multiple projects and she's a true professional."</p>
-                <span>- John Smith, Project Manager</span>
+                <p>"Her coding skills are impressive, and she always finds innovative solutions."</p>
+                <span>- Tobi Oladipo, UX/UI Designer</span>
             </div>
 
             <!-- testimonial -->
             <div class="testimonial">
-                <p>"Jasmine's creativity and problem-solving skills are outstanding!"</p>
-                <span>- Jane Doe, CEO TechCorp</span>
+                <p>"Jasmine's technical expertise and professionalism make her stand out!"</p>
+                <span>- Kelechi Nwosu, IT Consultant</span>
             </div>
         </div>
+
     </div>
 
     <!-- contact -->
