--- a/index.html
+++ b/index.html
@@ -469,18 +469,28 @@
         <h2>Contact Me</h2>
 
         <!-- form -->
-        <form action="#" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your name" required />
+<form action="https://formsubmit.co/e660851cef69e2b6378478e36476f765" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required />
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required />
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required />
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" placeholder="Your message here..." required></textarea>
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="4" placeholder="Your message here..." required></textarea>
 
-            <button type="submit">Send Message</button>
-        </form>
+    <button type="submit">Send Message</button>
+
+    <!-- Thank You Page -->
+    <input type="hidden" name="_next" value="thankyou.html">
+
+    <!-- Disable reCAPTCHA -->
+    <input type="hidden" name="_captcha" value="false">
+
+    <!-- Autoresponse Email -->
+    <input type="hidden" name="_autoresponse" value="Thank you for reaching out! I'll respond as soon as possible.">
+</form>
+
     </div>
 
     <!-- footer -->
