--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Redirect Script -->
     <script>
         setTimeout(function () {
-            window.location.href = "http://127.0.0.1:5500/portfolio.html"; 
+            window.location.href = "portfolio.html"; 
         }, 4000);
     </script>
 
