--- a/portfolio.html
+++ b/portfolio.html
@@ -482,7 +482,7 @@
             <button type="submit">Send Message</button>
 
             <!-- Thank You Page -->
-            <input type="hidden" name="_next" value="thankyou.html">
+            <input type="hidden" name="_next" value="https://profile-zeta-ebon.vercel.app/thankyou.html">
 
             <!-- Disable reCAPTCHA -->
             <input type="hidden" name="_captcha" value="false">
