--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,19 @@
     <!-- title -->
     <title>Adebowale Jasmine - Portfolio</title>
 
+    <!-- Open Graph Meta Tags for Social Media Preview -->
+    <meta property="og:title" content="Adebowale Jasmine - Portfolio">
+    <meta property="og:description" content="Explore my work as a skilled developer and problem-solver.">
+    <meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/A girl.jpg">
+    <meta property="og:url" content="https://profile-zeta-ebon.vercel.app/index.html">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+
     <!-- google-font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900&display=swap"
         rel="stylesheet">
 
     <!-- font-awesome -->
@@ -26,6 +34,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
 </head>
+
 
 <body>
 
