--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,13 @@
     <title>Adebowale Jasmine - Portfolio</title>
 
     <!-- Open Graph Meta Tags for Social Media Preview -->
-    <meta property="og:title" content="Adebowale Jasmine - Portfolio">
-    <meta property="og:description" content="Explore my work as a skilled developer and problem-solver.">
-    <meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/A girl.jpg">
-    <meta property="og:url" content="https://profile-zeta-ebon.vercel.app/index.html">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
+<meta property="og:title" content="Adebowale Jasmine - Portfolio">
+<meta property="og:description" content="Explore my work as a skilled developer and problem-solver.">
+<meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/j-icon.png">
+<meta property="og:url" content="https://profile-zeta-ebon.vercel.app/index.html">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+
 
     <!-- google-font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
